k8s/actions_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: actions
  namespace: default
  labels:
    app: actions
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: actions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actions
  labels:
    app: actions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actions
  template:
    metadata:
      labels:
        app: actions
    spec:
      containers:
        - name: actions
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: rubenwo/home-automation-actions-service:latest
