k8s/food_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: food
  namespace: default
  labels:
    app: food
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: food
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food
  labels:
    app: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food
  template:
    metadata:
      labels:
        app: food
    spec:
      containers:
        - name: food
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: rubenwo/home-automation-food-service:latest
