k8s/gateway_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: rubenwo/home-automation-gateway-service:latest
          volumeMounts:
          - name: config-volume
            mountPath: /root/ingress.yaml
            subPath: ingress.yaml
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: ingress-config
