k8s/hue_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hue
  namespace: default
  labels:
    app: hue
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: hue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hue
  labels:
    app: hue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hue
  template:
    metadata:
      labels:
        app: hue
    spec:
      containers:
        - name: hue
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: rubenwo/home-automation-hue-service:latest
