k8s/inventory_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: default
  labels:
    app: inventory
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: inventory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: rubenwo/home-automation-inventory-service:latest
