k8s/mqtt_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker
  namespace: default
  labels:
    app: mqtt-broker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 1883
  selector:
    app: mqtt-broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-broker
  labels:
    app: mqtt-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-broker
  template:
    metadata:
      labels:
        app: mqtt-broker
    spec:
      containers:
        - name: mqtt-broker
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: eclipse-mosquitto:1.6.13
